--- a/symfony-project/templates/matching/index.html.twig
+++ b/symfony-project/templates/matching/index.html.twig
@@ -60,7 +60,7 @@
 		<div class="container w-100" style="margin-bottom:5rem;width:100vw">
 			<nav class="site-nav" style="width:100vw;">
 				<div class="logo">
-					<a class="text-black text-bold">AdopteUnDev<span class="text-black text-bold">.</span>
+					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
 					</a>
 				</div>
 				<div class="row align-items-center">
@@ -68,19 +68,19 @@
 					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 							<li>
-								<a class="text-black text-bold" href="{{path('app_developer')}}">Accueil</a>
+								<a class="text-black" href="{{path('app_developer')}}">Accueil</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_offre')}}">Offres</a>
+								<a class="text-black" href="{{path('app_offre')}}">Offres</a>
 							</li>
 							<li class="active">
-								<a class="text-black text-bold" href="{{path('app_matching')}}">Matching</a>
+								<a class="text-black font-weight-bold" href="{{path('app_matching')}}">Matching</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">Favoris</a>
+								<a class="text-black" href="">Favoris</a>
 							</li>
 							<li>
-								<a class="text-black text-bold" href="">
+								<a class="text-black" href="">
 									<span class="fa fa-user"></span>
 									Mon compte
 								</a>
@@ -160,7 +160,7 @@
 									<br>
 									Nanterre, France
 								</p>
-								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 							</div>
 						</div>
 					</div>
@@ -175,7 +175,7 @@
 									<br>
 									Boulogne-Billancourt, France
 								</p>
-								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 							</div>
 						</div>
 					</div>
@@ -190,7 +190,7 @@
 									<br>
 									Courbevoie, France
 								</p>
-								<a href="{{ path('app_offre') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+								<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
 							</div>
 						</div>
 					</div>
