--- a/symfony-project/templates/company/fiche-poste.html.twig
+++ b/symfony-project/templates/company/fiche-poste.html.twig
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
+		<meta name="inscriptionor" content="Untree.co">
 		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
 
 		<meta name="description" content=""/>
@@ -54,10 +54,10 @@
 								<a href="#" class="text-black font-weight-bold">Mon compte</a>
 								<ul class="dropdown">
 									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('auth-company')}}">Connexion</a>
+										<a class="text-black" style="cursor:pointer;" href="{{path('inscription-company')}}">Connexion</a>
 									</li>
 									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('signin-company')}}">Inscription</a>
+										<a class="text-black" style="cursor:pointer;" href="#">Inscription</a>
 									</li>
 								</ul>
 							</li>
