--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
+		<meta name="inscriptionor" content="Untree.co">
 		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
 
 		<meta name="description" content=""/>
@@ -50,12 +50,24 @@
 							<li>
 								<a href="">Favoris</a>
 							</li>
-							<li>
-								<a href="{{path('app_auth')}}">
+
+							<li class="has-children">
+								<a href="#">Mon compte</a>
+								<ul class="dropdown">
+									<li>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
+									</li>
+									<li>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
+									</li>
+								</ul>
+							</li>
+							{# <li>
+								<a href="{{path('app_inscription')}}">
 									<span class="fa fa-user"></span>
 									Mon compte
 								</a>
-							</li>
+							</li> #}
 						</ul>
 
 					</div>
