--- a/symfony-project/templates/offre/success.html.twig
+++ b/symfony-project/templates/offre/success.html.twig
@@ -21,7 +21,7 @@
 					<hr>
 					<p class="card-text">Que souhaitez-vous faire ensuite ?</p>
 					<div class="d-flex justify-content-center">
-						<a href="{{path('app_auth')}}" class="btn btn-primary mx-2">Retour à l'accueil</a>
+						<a href="{{path('app_inscription')}}" class="btn btn-primary mx-2">Retour à l'accueil</a>
 						<a href="{{path('app_offre')}}" class="btn btn-success mx-2">Explorer les offres</a>
 						<a href="{{path('app_favorites')}}" class="btn btn-secondary mx-2">Voir mon profil</a>
 					</div>
